k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-cicd-api-service
  labels:
    app.kubernetes.io/name: python-cicd
    app.kubernetes.io/instance: production
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: python-cicd
    app.kubernetes.io/instance: production
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
