k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-cicd-api
  labels:
    app.kubernetes.io/name: python-cicd
    app.kubernetes.io/instance: production
    app.kubernetes.io/component: api
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-cicd-api-service
                port:
                  name: http
